building rework and started with collector mechanic